with-valid-domain/zc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: zon # Select pods with the label "app: zon"
  ports:
  - protocol: TCP
    port: 80 # Port exposed by the service
    targetPort: 80 # Port to forward traffic to in the pods
  type: ClusterIP
