with-valid-domain/zc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: nginx-ingress
  annotations:
      # kubernetes.io/ingress.class: alb # annotation deprecated
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/tags: createdBy=aws-controller
      alb.ingress.kubernetes.io/subnets: subnet-0024e0a8b4385349c,subnet-080927fada1a41643
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
      alb.ingress.kubernetes.io/ssl-redirect: '443'
      # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}' # old method (not working)
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:628809433177:certificate/3c16c866-88f9-4e0d-bd27-db5d2f071f30
  labels:
    app: zon
spec:
  ingressClassName: alb # replacement / alternative to avoid the deprecated annotation
  rules:
    - host: zoncoffee.devopslint.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
